Handle index when org count < 4.

--- a/app/views/organizations/index.html.haml
+++ b/app/views/organizations/index.html.haml
@@ -4,7 +4,7 @@
       .alert.alert-info
         Currently there are no organizations on Aperio.
   - else
-    - @organizations.each_slice(@organizations.count / 4) do |organizations_group|
+    - @organizations.each_slice(@organizations.count / 4 + 1) do |organizations_group|
       .col-md-3.col-sm-6
         - organizations_group.each do |organization|
           = render partial: "organizations/summary", locals: { organization: organization }
