--- a/app/views/global/home.html.haml
+++ b/app/views/global/home.html.haml
@@ -1,49 +1,30 @@
 .row.ap-top-space
-  .col-md-offset-2.col-md-8.col-xs-12
+  .col-md-12
     .jumbotron
       %center
         %h1
-          a·pe·rio:
+          a·pe·rio
         %p
           (verb) to open, disclose
         %p
           (noun) visible, transparent
+        %p
+          Run your organization transparently
+        %p
+          Engage meaningfully with your members
+        %p
+          Increase productivity and reach of your organization
+        %p
+          Be accessible anytime, anywhere: mobile, web, tablet, ...
+
 .row
-  .col-md-offset-2.col-md-4.col-xs-12
-    .thumbnail
-      .caption
-        %h3.text-info.ap-advertise-header
-          Individuals
-        %p
-          %ul.list-unstyled.ap-advertise
-            %li
-              .pull-left.ap-advertise-icon
-                %i.fa.fa-search-plus.fa-2x
-              Find organizations who share your passions and need your help
-              .clearfix
-            %li
-              .pull-left.ap-advertise-icon
-                %i.fa.fa-signal.fa-2x
-              Start contributing to the causes you believe in now!
-              .clearfix
-          %a.btn.btn-primary.btn-block.btn-lg{:href => organizations_path()}
-            Discover the Organizations
-  .col-md-4.col-xs-12
-    .thumbnail
-      .caption
-        %h3.text-info.ap-advertise-header
-          Organizations
-        %p
-          %ul.list-unstyled.ap-advertise
-            %li
-              .pull-left.ap-advertise-icon
-                %i.fa.fa-users.fa-2x
-              Engage meaningfully with your members
-              .clearfix
-            %li
-              .pull-left.ap-advertise-icon
-                %i.fa.fa-cubes.fa-2x
-              Increase productivity and reach of your organization
-              .clearfix
-          %a.btn.btn-primary.btn-block.btn-lg{:href => new_organization_path()}
-            Try Aperio
+  .col-md-offset-2.col-md-4.col-xs-12.ap-vertical-space
+    %a.btn.btn-primary.btn-block.btn-lg{:href => new_organization_path()}
+      Join Aperio
+  .col-md-4.col-xs-12.ap-vertical-space
+    %a.btn.btn-primary.btn-block.btn-lg{:href => organizations_path()}
+      Browse organizations on Aperio
+.row
+  .col-md-offset-4.col-md-4.col-xs-12.ap-vertical-space
+    %a.btn.btn-primary.btn-block.btn-lg{:href => about_path()}
+      About Aperio
