--- a/app/views/organizations/new.html.haml
+++ b/app/views/organizations/new.html.haml
@@ -4,15 +4,19 @@
       .form-group
         = f.label :name, "Name", class: "col-sm-3 control-label"
         .col-sm-6
-          = f.text_field :name, class: "form-control", placeholder: "Name"
+          = f.text_field :name, class: "form-control", placeholder: "Organization Name"
       .form-group
         = f.label :website, "Website", class: "col-sm-3 control-label"
         .col-sm-6
-          = f.text_field :website, class: "form-control", placeholder: "Website"
+          = f.text_field :website, class: "form-control", placeholder: "Organization Website"
+      .form-group
+        = f.label :summary, "Summary", class: "col-sm-3 control-label"
+        .col-sm-6
+          = f.text_area :summary, class: "form-control", placeholder: "Describe your organization with a couple of sentences", rows: 2
       .form-group
         = f.label :description, "Description", class: "col-sm-3 control-label"
         .col-sm-6
-          = f.text_area :description, class: "form-control", placeholder: "Description", rows: 10
+          = f.text_area :description, class: "form-control", placeholder: "More details about your organization", rows: 10
       .form-group
         .col-sm-offset-3.col-sm-9
           = f.submit "Create Organization", class: "btn btn-primary"
