--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,7 +1,7 @@
 %nav.ap-navbar.ap-navbar-default.ap-navbar-fixed-top{:role => "navigation"}
   .container
     .ap-navbar-header
-      %a.ap-navbar-brand{:href => root_path()}
+      %a.ap-navbar-brand{:href => root_path(), :title => "Home Page", :data => {toggle: "tooltip", placement: "bottom", container: 'body'}}
         aperio
     - if current_user
       %ul.ap-nav.ap-navbar-nav.ap-navbar-right
@@ -10,16 +10,16 @@
             %i.fa.fa-lg.fa-user
             = render partial: "shared/badge", locals: {count: current_user.notification_count}
         %li
-          %a{:href => "#", :title => "Inbox", :data => {toggle: "offcanvas", target: "#inbox-orgs", tooltip: "tooltip", placement: "bottom"}}
-            %i.fa.fa-lg.fa-inbox
+          %a{:href => "#", :title => "Organizations", :data => {toggle: "offcanvas", target: "#inbox-orgs", tooltip: "tooltip", placement: "bottom"}}
+            %i.fa.fa-lg.fa-bank
             = render partial: "shared/badge", locals: {count: current_user.notification_count(type: :conversation)}
         %li
-          %a.ap-logout{:href => "#", :title => "Sign out", :data => {toggle: "tooltip", placement: "bottom"}}
+          %a.ap-logout{:href => "#", :title => "Sign out", :data => {toggle: "tooltip", placement: "bottom", container: 'body'}}
             %i.fa.fa-lg.fa-sign-out
     - else
       %ul.ap-nav.ap-navbar-nav.ap-navbar-right
         %li
-          %a{:href => new_user_path(), :title => "Sign in", :data => {toggle: "tooltip", placement: "bottom"}}
+          %a{:href => new_user_path(), :title => "Sign in", :data => {toggle: "tooltip", placement: "bottom", container: 'body'}}
             %i.fa.fa-lg.fa-sign-in
   - if current_user
     #inbox-orgs.row.row-offcanvas.row-offcanvas-right
