--- a/app/views/organizations/index.html.haml
+++ b/app/views/organizations/index.html.haml
@@ -8,7 +8,7 @@
       .alert.alert-info
         Currently there are no organizations on Aperio.
   - else
-    - @organizations.each_slice((@organizations.count / 4).ceil) do |organizations_group|
+    - @organizations.each_slice(((@organizations.count / 4.0).ceil)) do |organizations_group|
       .col-md-3.col-sm-6
         - organizations_group.each do |organization|
           = render partial: "organizations/summary", locals: { organization: organization }
