Remove the About Aperio button temporarily.

--- a/app/views/global/about.html.haml
+++ b/app/views/global/about.html.haml
@@ -3,6 +3,4 @@
     %h2.text-primary
       About Aperio
     %p
-      Aperio is a platform that is born out of frustration ...
-    %p
-      Moar words here.
+      This section will contain more information about aperio.
