--- a/app/views/global/home.html.haml
+++ b/app/views/global/home.html.haml
@@ -24,7 +24,7 @@
   .col-md-4.col-xs-12.ap-vertical-space
     %a.btn.btn-primary.btn-block.btn-lg{:href => organizations_path()}
       Browse organizations on Aperio
-.row
-  .col-md-offset-4.col-md-4.col-xs-12.ap-vertical-space
-    %a.btn.btn-primary.btn-block.btn-lg{:href => about_path()}
-      About Aperio
+-# .row
+-#   .col-md-offset-4.col-md-4.col-xs-12.ap-vertical-space
+-#     %a.btn.btn-primary.btn-block.btn-lg{:href => about_path()}
+-#       About Aperio
